--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,6 +5,7 @@
 
 html {
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -14,6 +15,8 @@ body {
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
 
 #home {
   height: 100%;
@@ -82,6 +85,41 @@ nav.navbar-transparente {
   padding-bottom: 20px;
 }
 
+#rodape {
+background-color: black;
+padding: 50px 0px 20px 0px;
+position: relative;
+
+}
+
+footer h4 {
+  color:#919496;
+  font-size: 0.8em;
+  text-transform: uppercase;
+}
+
+footer .navbar-nav a {
+  color: white;
+  font-size: 0.8em;
+}
+
+footer .navbar-nav a:hover {
+  color: #9bf0e1;
+  text-decoration: none;
+   
+}
+
+footer ul {
+  list-style: none;
+   
+}
+
+footer ul li {
+  float: right;
+  margin: 0px 5px;
+   
+}
+
 #servicos h2 {
   color:#7c25f8 ;
 }
@@ -90,25 +128,27 @@ nav.navbar-transparente {
   color:#7c25f8 ;
 }
 
-#navegacao  {
-  padding-top: 30px;
+#recursos  {
+  padding-top: 20px;
   padding-bottom: 20px;
   }
-#navegacao h2 {
+#recursos h2 {
 color: white
 }
 
-#navegacao h3{
+#recursos h3{
   color: aquamarine
 }
 
-#navegacao p{
+#recursos p{
   color: white
 }
 
-#imagemiphone {
-transform: rotate(25deg);
-padding: 50px 10px;
+.rotacionar {
+-ms-transform: rotate(30deg);
+-webkit-transform: rotate(30deg);
+transform: rotate(30deg);
+padding-left:80px;
 }
 
 .albuns {
